[gd_scene load_steps=9 format=2]

[ext_resource path="res://Audio/Pickup.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/HealthPickup.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Health_Orb.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 0, 0.4, 1, 1, 0, 0.4, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 7 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="HealthPickup" type="Area2D"]
position = Vector2( 240, 88 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="PartsHeal" type="Particles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource( 8 )

[node name="SoundHeal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
pitch_scale = 1.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 5 )

[node name="TimerDestroy" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_HealthPickup_body_entered"]
[connection signal="timeout" from="TimerDestroy" to="." method="queue_free"]
